# block-smc

./: .gitignore  README.md  pyproject.toml
experiments/: Validate  block_size_scaling.py  block_size_scaling_no_grammar.json  block_size_scaling_with_grammar.json  compare_methods.py  compare_methods_v2.py  comparison_results.json  comparison_v2_results.json  debug_pipeline.py  diagnose_results.json  diagnose_twist.py  em_results_seed42.json  fast-downward.sh  goal_inference_results.json  holdout_results.json  holdout_results_obj9.json  holdout_test.py  holdout_test_molecular.py  inspect_results.json  inspect_twist.py  recover_results.py  run_goal_inference.py  run_holdout.sh  sweep_results.json  sweep_twist.py  test_em.py  test_learned_twist.py  test_oracle_twist.py  twist_diagnostics.json  validate.sh
src/block_smc/: __init__.py  boundary.py  boundary_learning.py  critic.py  em.py  hidden_states.py  sampler.py  twist.py
tests/: test_boundary.py  test_boundary_learning.py  test_hidden_states.py  test_twist.py
